spring/spring-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress-ssl
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: spring.huarent.ip-ddns.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring
                port:
                  name: spring  
  tls:
    - hosts:
        - spring.huarent.ip-ddns.com
      secretName: spring-production-certificate
